Set font-size in Ticket view properties to 100% and fixed the alignments of some more labels
git-svn-id: https://svn.apache.org/repos/asf/incubator/bloodhound/trunk@1327573 13f79535-47bb-0310-9956-ffa450edef68

--- a/bloodhound_theme/bhtheme/htdocs/bloodhound.css
+++ b/bloodhound_theme/bhtheme/htdocs/bloodhound.css
@@ -57,7 +57,14 @@ span:target {
 
 .buttons form,
 .buttons form div,
-.filters label {
+.filters label,
+#action label,
+#trac-comments-order label,
+#changeinfo label,
+.iefix #rows label,
+label + input,
+input + label,
+label > input {
 	display: inline;
 }
 
@@ -96,3 +103,13 @@ span:target {
 }
 
 /* @end */
+
+#ticket table.properties td,
+#ticket table.properties th {
+	font-size: 100%;
+}
+
+#ticket footer {
+  text-align: right;
+  
+}
